<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:minWidth="900dp"
    android:minHeight="1500dp"
    android:padding = "20dp"
    android:orientation="vertical"
    android:weightSum="11"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="6"
        android:layout_weight="2"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="65dp"
                android:text="@string/str_providing_agreement_title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/info_providing_btn_id"
                android:clickable="true"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="35dp"
                android:text="@string/str_close_dialog" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_weight="8"
        android:layout_height="0dp">
        <TextView
            android:text="@string/str_providing_agreement_body"
            android:layout_width="match_parent"
            android:textSize="35dp"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:weightSum="6"
        android:gravity="right"
        android:orientation="horizontal"
        android:layout_height="0dp">

        <Button
            android:id="@+id/info_providing_bottom_btn_id"
            android:clickable="true"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="35dp"
            android:padding="5dp"
            android:text="@string/str_close_dialog"
            android:layout_height="match_parent" />

    </LinearLayout>

</LinearLayout>