<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="50dp"
        android:weightSum="8"
        android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/base_layout_view"
        android:layout_weight="2"
        android:layout_gravity="center_horizontal"
        android:visibility="visible"
        android:weightSum="6"
        android:orientation="vertical"
        android:layout_height="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_horizontal"
            android:weightSum="6"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_weight="4.5">

            <ImageView
                android:layout_width="300dp"
                android:layout_weight="3"
                android:layout_height="0dp"
                android:scaleType="fitCenter"
                android:src="@drawable/icon_card" />

            <TextView
                android:id="@+id/status_guid_text_view"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:text="@string/msg_card_payment"
                android:textSize="45dp" />
            <View
                android:layout_width="match_parent"
                android:id="@+id/id_empty_view"
                android:layout_weight="2"
                android:layout_height="0dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:id="@+id/payment_layout_view"
            android:layout_weight="1.5"
            android:background="@drawable/bg_product">

            <TextView
                android:id="@+id/payment_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/msg_payment_amount"
                android:textColor="@color/white"
                android:textSize="45dp" />

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:id="@+id/billing_prog_layout"
        android:layout_weight="6"
        android:gravity="center_horizontal"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ordernum_layout_view"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/id_order_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Yellow"
                android:layout_gravity="center_horizontal"
                android:text="80"
                android:textStyle="bold"
                android:textSize="160dp" />
            <TextView
                android:id="@+id/id_waiting_number"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="대기자 수   2"
                android:textSize="50dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="40dp"/>

        <ImageView
            android:id="@+id/iv_billing_progress"
            android:layout_margin="70dp"
            android:gravity="center_horizontal"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/billing_progress"/>
        <TextView
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:id="@+id/billing_prog_text"
            android:paddingTop="13dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="40dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="6"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="visible"
        android:id="@+id/result_layout_view"
        android:layout_alignParentBottom="true"
        android:weightSum="7"
        android:layout_height="0dp">

        <View
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"/>

        <TextView
            android:id="@+id/result_guid_text_view"
            android:layout_width="wrap_content"
            android:layout_weight="2"
            android:layout_height="0dp"
            android:text="@string/msg_card_insert"
            android:textColor="@color/Orange"
            android:textSize="40dp" />

        <View
            android:layout_width="match_parent"
            android:layout_weight="0.4"
            android:layout_height="0dp"/>

        <ImageView
            android:id="@+id/iv_frame_loading"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/frame_loading"
            android:scaleType="fitCenter"
            android:layout_margin="70dp" />

        <View
            android:layout_width="match_parent"
            android:layout_weight="1.6"
            android:layout_height="0dp"/>

    </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>